--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
