--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-calendar": "^3.8.0",
     "react-dom": "^18.2.0",
