--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "colors": "^1.4.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
