--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -26,8 +26,10 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
